--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -6,6 +6,7 @@
   font-size:14px;
   text-overflow: ellipsis;
   word-wrap: break-word;
+  overflow: hidden;
   img, iframe { max-width: 100%; border: 0; }
   p,
   pre,
@@ -43,7 +44,7 @@
     border: 0px;
     border-top: 1px solid #f0f0f0;
     border-bottom: 1px solid #f0f0f0;
-    margin: 0 -15px 15px -15px;
+    margin-bottom: 15px;
     padding: 5px 15px;
     color: #444;
     overflow: auto;
